@@ -1,3 +1,12 @@
+[v9r1p17]
+use DIRAC v6r19p22
+
+* remove useless code
+* protect against no site for SE
+* fix printout
+* fix variable names
+* fix wildcard processing pass if all file types are given
+
 [v9r1p16]
 use DIRAC v6r19p21
 
